# NGram-CPP

./: .gitignore  AdditiveSmoothing.h  CMakeLists.txt  GoodTuringSmoothing.h  InterpolatedSmoothing.h  LaplaceSmoothing.h  NGram.h  NGramNode.h  NoSmoothing.h  NoSmoothingWithDictionary.h  NoSmoothingWithNonRareWords.h  README.md  SimpleSmoothing.h  TestNGram.cpp  TrainedSmoothing.h  UnseenCase.cpp  UnseenCase.h  conanfile.py  conanfile.txt
Test/: AdditiveSmoothingTest.cpp  GoodTuringSmoothingTest.cpp  InterpolatedSmoothingTest.cpp  LaplaceSmoothingTest.cpp  NGramTest.cpp  NoSmoothingTest.cpp  ReadCorpus.cpp  ReadCorpus.h  test.txt
include/: CounterHashMap.h  CrossValidation.h  DeterminantZero.h  Eigenvector.h  KFoldCrossValidation.h  Matrix.h  MatrixColumnMismatch.h  Vector.h
src/: AdditiveSmoothing.h  CMakeLists.txt  GoodTuringSmoothing.h  InterpolatedSmoothing.h  LaplaceSmoothing.h  NGram.h  NGramNode.h  NoSmoothing.h  NoSmoothingWithDictionary.h  NoSmoothingWithNonRareWords.h  SimpleSmoothing.h  TrainedSmoothing.h
